# TRexSelector

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG  CMakeLists.txt  CMakePresets.json  HISTORY.md  LICENSE  README.md  compile_commands.json  fix_args2.py  fix_cout_cerr.py  fix_cout_cerr2.py  mypy.ini  rewrite_logger.py  vcpkg.json
Python/TRexSelector/: CMakeLists.txt  README.md  pyproject.toml
Python/TRexSelector/build_test/: patch_cpp.py  test_logs.py  update_wrappers.py
Python/TRexSelector/tests/: conftest.py  test_final.py  test_ml_methods_pca.py  test_ml_methods_regression.py  test_ml_methods_svd.py  test_no_omp.py  test_submodule_exports.py  test_trex_biobank.py  test_trex_gvs.py  test_trex_selector.py  test_trex_spca.py  test_tsolvers.py  test_utils.py
R/TRexSelectorNeo/: .Rbuildignore  .clangd  DESCRIPTION  NAMESPACE  README.Rmd  README.md  configure  configure.ac  cran-comments.md
R/TRexSelectorNeo/R/: RcppExports.R  control_parameters.R  ml_methods.R  trex_biobank_screening_selector.R  trex_da_selector.R  trex_gvs_selector.R  trex_screening_selector.R  trex_selector.R  trex_spca_selector.R  tsolvers.R  utils.R  zzz.R
R/TRexSelectorNeo/inst/: CITATION
R/TRexSelectorNeo/man/: DistanceMetric.Rd  ElasticNet.Rd  ElasticNetCV.Rd  LinkageMethod.Rd  LpNormScaler.Rd  PCA.Rd  RidgeCV.Rd  RidgeSolver.Rd  SVDSolver.Rd  TACGPSolver.Rd  TACGP_Solver.Rd  TAFSSolver.Rd  TAFS_Solver.Rd  TENETAug_Solver.Rd  TENETSolver.Rd  TENET_Solver.Rd  TGPSolver.Rd  TGP_Solver.Rd  TIENETAug_Solver.Rd  TLARSSolver.Rd  TLARS_Solver.Rd  TLASSOSolver.Rd  TLASSO_Solver.Rd  TMPSolver.Rd  TMP_Solver.Rd  TNCGMPSolver.Rd  TNCGMP_Solver.Rd  TOMPSolver.Rd  TOMP_Solver.Rd  TOOLSSolver.Rd  TOOLS_Solver.Rd  TRexBiobankScreeningSelector.Rd  TRexDASelector.Rd  TRexGVSSelector.Rd  TRexSPCASelector.Rd  TRexScreeningSelector.Rd  TRexSelector.Rd  TSTAGEWISE_Solver.Rd  TSTEPWISESolver.Rd  TSTEPWISE_Solver.Rd  (+19 more)
R/TRexSelectorNeo/src/: Makevars.in  Makevars.win  RcppExports.cpp  TRexSelectorNeo_types.h  rcpp_clustering.cpp  rcpp_ml_methods.cpp  rcpp_trex_biobank_screening.cpp  rcpp_trex_biobank_screening.h  rcpp_trex_da.cpp  rcpp_trex_da.h  rcpp_trex_gvs.cpp  rcpp_trex_gvs.h  rcpp_trex_screening.cpp  rcpp_trex_screening.h  rcpp_trex_selector.cpp  rcpp_trex_selector.h  rcpp_trex_spca.cpp  rcpp_tsolvers.cpp  rcpp_utils.cpp
R/TRexSelectorNeo/tests/: testthat.R
R/TRexSelectorNeo/tools/: build_chain.sh  bundle_for_cran.sh  install.sh
R/TRexSelectorNeo/vignettes/: TRexSelector_usage_and_simulations.Rmd
cpp/src/ml_methods/: CMakeLists.txt
cpp/src/tsolvers/: CMakeLists.txt  tsolver_base.cpp  tsolver_base.hpp
cpp/src/utils/: CMakeLists.txt  global_temp_dir.hpp
cpp/tests/: CMakeLists.txt  test_sanity.cpp
cpp/tests/test_ml_methods/: test_ml_methods_agglomerative_cores.cpp  test_ml_methods_agglomerative_dispatcher.cpp  test_ml_methods_model_selection.cpp  test_ml_methods_pca.cpp  test_ml_methods_ridge.cpp  test_ml_methods_standardization.cpp  test_ml_methods_svd.cpp
cpp/tests/test_trex_selector_methods/: test_trex_biobank_screening.cpp  test_trex_core.cpp  test_trex_da.cpp  test_trex_gvs.cpp  test_trex_lloop_ondemand.cpp  test_trex_screening.cpp  test_trex_spca.cpp
cpp/tests/test_tsolvers/: test_tsolvers_execution.cpp  test_tsolvers_getters.cpp  test_tsolvers_initialization.cpp  test_tsolvers_mmap.cpp  test_tsolvers_polymorphic.cpp  test_tsolvers_serialization.cpp
cpp/tests/test_utils/: test_utils_datagen.cpp  test_utils_dummygen.cpp  (+8 more)
src/: CMakeLists.txt  DataTransformer.hpp  GVS_TRex_Selector.hpp  Ideas for Dummies.txt  Ideas for Dummy Permutation.txt  Normalizer.cpp  Normalizer.hpp  Screen_TRex_Selector.hpp  StandardScaler.cpp  StandardScaler.hpp  TACGP_Solver.cpp  TACGP_Solver.hpp  TENET_Solver.cpp  TENET_Solver.hpp  TGP_Solver.cpp  TGP_Solver.hpp  TLARS_Solver.cpp  TLARS_Solver.hpp  TLASSO_Solver.cpp  TLASSO_Solver.hpp  TOMP_Solver.cpp  TOMP_Solver.hpp  TRex_Selector.cpp  TRex_Selector.hpp  TSTEPWISE_Solver.cpp  TSTEPWISE_Solver.hpp  demo_00_scaler.cpp  demo_01_tlars.cpp  demo_02_tlasso.cpp  demo_03_tstepwise.cpp  demo_04_tenet.cpp  demo_05_tomp.cpp  demo_06_tgp.cpp  demo_07_tacgp.cpp  demo_08_trex.cpp  utils_cereal_armadillo.hpp  utils_cereal_eigen.hpp  utils_eval.hpp  utils_fdr_control.hpp  utils_memmap.hpp  (+3 more)
src/Optional Code/: GP.cpp  demo_07_tcgp.cpp
src/demos/: CMakeLists.txt  Results_ScTRex.txt  Results_TRex.txt  demo_00_scaler.cpp  demo_01_tlars.cpp  demo_02_tlasso.cpp  demo_03_tstepwise.cpp  demo_04_tenet.cpp  demo_05_tomp.cpp  demo_06_tgp.cpp  demo_07_tacgp.cpp  demo_08_trex.cpp  demo_09_screen_trex.cpp  demo_10_biobank_screen_trex.cpp  demo_13_plot_fdr_tpr_results.cpp  demo_XX_backend.cpp
src/ml_methods/: CMakeLists.txt  DataTransformer.hpp  Normalizer.cpp  Normalizer.hpp  StandardScaler.cpp  StandardScaler.hpp
src/trex/: CMakeLists.txt  TRex Software Todos.txt
src/trex_selector_methods/: CMakeLists.txt  TRex Software Todos.txt
src/tsolvers/: CMakeLists.txt  TACGP_Solver.cpp  TGP_Solver.cpp  TIENET.cpp  TIENET.hpp  TLARS_Solver.hpp  TLASSO_Solver.hpp  TOMP_Solver.hpp  TSTEPWISE_Solver.hpp  lm_tsolvers.hpp  tsolver_base.cpp  tsolver_base.hpp
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/test_ml_methods/: test_ml_methods_agglomerative_cores.cpp  test_ml_methods_agglomerative_dispatcher.cpp  test_ml_methods_model_selection.cpp  test_ml_methods_pca.cpp  test_ml_methods_ridge.cpp  test_ml_methods_standardization.cpp  test_ml_methods_svd.cpp
tests/test_trex_selector_methods/: test_trex_biobank_screening.cpp  test_trex_core.cpp  test_trex_da.cpp  test_trex_gvs.cpp  test_trex_screening.cpp  test_trex_spca.cpp
tests/test_tsolvers/: test_tsolvers_execution.cpp  test_tsolvers_getters.cpp  test_tsolvers_initialization.cpp  test_tsolvers_mmap.cpp  test_tsolvers_polymorphic.cpp  test_tsolvers_serialization.cpp
tests/test_utils/: test_utils_datagen.cpp  test_utils_dummygen.cpp  test_utils_eval_metrics.cpp  test_utils_fp_classify.cpp  test_utils_logging.cpp  test_utils_memmap.cpp  test_utils_noisegen.cpp  test_utils_openmp.cpp  test_utils_serialization.cpp
(+6469 files in other folders)
