[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "TRexSelectorNeo"
version = "0.2.0"
description = "Python API for the TRexSelector C++ library (T-Rex selector with FDR control)"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Fabian Scheidt",      email = "fabian.scheidt@tu-darmstadt.de"},
    {name = "Arnau Vilella Pique", email = "avp@connect.ust.hk"},
    {name = "Jasin Machkour",      email = "jasin.machkour@tu-darmstadt.de"},
    {name = "Daniel P. Palomar",   email = "daniel.p.palomar@gmail.com"},
    {name = "Michael Muma",        email = "michael.muma@tu-darmstadt.de"},
]
keywords = ["variable selection", "FDR control", "high-dimensional statistics", "sparse regression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/G4Lactus/TRexSelector"
Repository = "https://github.com/G4Lactus/TRexSelector"
"Bug Tracker" = "https://github.com/G4Lactus/TRexSelector/issues"

[project.optional-dependencies]
dev = ["pytest"]

[tool.scikit-build]
wheel.packages = ["src/trex_selector_neo"]
wheel.exclude = ["**/__pycache__", "**/*.pyc"]
sdist.exclude = ["build", "dist", "wheelhouse", "**/__pycache__", "**/*.pyc", "*.whl"]
cmake.source-dir = "."
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
TREX_PORTABLE_BUILD = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"
